--- a/index.html
+++ b/index.html
@@ -491,15 +491,15 @@
 
                 <!-- nav -->
                 <div class="nav">
-                    <a href="https://github.com/LumenDetects/LumenAI"class="link about-link hover-button">
+                    <a href="https://github.com/LOCK-Encryption/Quantum-Encryption"class="link about-link hover-button">
                         <span>Github</span>
                     </a>
 
-                    <a href="https://lumen-1.gitbook.io/lumen-ai"class="link about-link hover-button">
+                    <a href="https://lock-quantum.gitbook.io/lock-quantum-encryption"class="link about-link hover-button">
                         <span>Documentation</span>
                     </a>
 
-                    <a href="https://x.com/LumenDetects"class="link about-link hover-button">
+                    <a href="https://x.com/LOCK_Encryption"class="link about-link hover-button">
                         <span>Twitter</span>
                     </a>
                 </div>
